--- a/drivers/staging/qcacld-3.0/configs/default_defconfig
+++ b/drivers/staging/qcacld-3.0/configs/default_defconfig
@@ -3,7 +3,7 @@ ifeq ($(CONFIG_CNSS_QCA6290), y)
 		CONFIG_QCA_WIFI_NAPIER_EMULATION := y
 	endif
 	CONFIG_LITHIUM := y
-	CONFIG_WLAN_FEATURE_11AX := y
+	CONFIG_WLAN_FEATURE_11AX := n
 	CONFIG_WLAN_FEATURE_DFS_OFFLOAD := y
 	CONFIG_IPA3 := n
 endif
@@ -42,13 +42,12 @@ ifeq ($(CONFIG_ICNSS), y)
 	endif
 endif
 
-DEVELOPER_DISABLE_BUILD_TIMESTAMP := y
+DEVELOPER_DISABLE_BUILD_TIMESTAMP := n
 ifneq ($(DEVELOPER_DISABLE_BUILD_TIMESTAMP), y)
 ifneq ($(WLAN_DISABLE_BUILD_TAG), y)
-CONFIG_BUILD_TAG := y
-endif
-endif
 CONFIG_BUILD_TAG := n
+endif
+endif
 
 ifeq ($(CONFIG_ARCH_MDM9630), y)
 CONFIG_MOBILE_ROUTER := y
@@ -187,6 +186,7 @@ ifeq ($(CONFIG_ROME_IF),usb)
 endif
 
 CONFIG_MPC_UT_FRAMEWORK := n
+
 CONFIG_FEATURE_EPPING := n
 
 #Flag to enable offload packets feature
@@ -308,12 +308,14 @@ CONFIG_WLAN_CLD_PM_QOS := y
 endif
 
 #Enable WLAN/Power debugfs feature only if debug_fs is enabled
-ifeq ($(CONFIG_ANDROID), y)
-       CONFIG_WLAN_DEBUGFS := y
+ifeq ($(CONFIG_DEBUG_FS), y)
+       # Flag to enable debugfs. Depends on CONFIG_DEBUG_FS in kernel
+       # configuration.
+       CONFIG_WLAN_DEBUGFS := n
 
-       CONFIG_WLAN_POWER_DEBUGFS := y
+       CONFIG_WLAN_POWER_DEBUGFS := n
 
-       CONFIG_WLAN_MWS_INFO_DEBUGFS := y
+       CONFIG_WLAN_MWS_INFO_DEBUGFS := n
 endif
 
 # Feature flags which are not (currently) configurable via Kconfig
@@ -560,7 +562,7 @@ CONFIG_WLAN_FEATURE_PACKET_FILTERING := y
 CONFIG_WLAN_NS_OFFLOAD := y
 CONFIG_FEATURE_WLAN_RA_FILTERING:= y
 CONFIG_FEATURE_WLAN_LPHB := y
-CONFIG_QCA_SUPPORT_TX_THROTTLE := y
+CONFIG_QCA_SUPPORT_TX_THROTTLE := n
 CONFIG_WMI_INTERFACE_EVENT_LOGGING := n
 CONFIG_WLAN_FEATURE_LINK_LAYER_STATS := y
 CONFIG_FEATURE_WLAN_EXTSCAN := y
@@ -571,7 +573,7 @@ CONFIG_LEGACY_CHAN_ENUM := y
 CONFIG_WLAN_PMO_ENABLE := y
 CONFIG_CONVERGED_P2P_ENABLE := y
 CONFIG_WLAN_POLICY_MGR_ENABLE := y
-CONFIG_SUPPORT_11AX := y
+CONFIG_SUPPORT_11AX := n
 CONFIG_HDD_INIT_WITH_RTNL_LOCK := y
 CONFIG_CONVERGED_TDLS_ENABLE := y
 CONFIG_WLAN_CONV_SPECTRAL_ENABLE := y
@@ -623,6 +625,14 @@ CONFIG_CHANNEL_HOPPING_ALL_BANDS := y
 endif
 
 CONFIG_WLAN_LOGGING_SOCK_SVC := n
+
+ifneq ($(TARGET_BUILD_VARIANT),user)
+CONFIG_DESC_DUP_DETECT_DEBUG := n
+CONFIG_DEBUG_RX_RING_BUFFER := n
+endif
+
+CONFIG_DP_TRACE := n
+#Enable Beacon Reception Stats
 CONFIG_FEATURE_BECN_STATS := n
 
 #enable MPTA helper for QCS405
@@ -646,7 +656,10 @@ ifeq ($(CONFIG_ARCH_SDM660), y)
 CONFIG_WLAN_FEATURE_PKT_CAPTURE := y
 endif
 
+#Enable RX RING buffers debug
+CONFIG_DEBUG_RX_RING_BUFFER := n
+
 #Enable Hash debug
-CONFIG_RX_HASH_DEBUG := y
+CONFIG_RX_HASH_DEBUG := n
 
 CONFIG_WLAN_HANG_EVENT := n
